[FIX] web_editor: wrong position of top option icons
Restore the position of the icons in the top options so that they are
aligned horizontally and no longer vertically.

task-2162952

X-original-commit: e4fcba353804d2be079b16aaad7dbe94b884e156

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -307,7 +307,9 @@ body.editor_enable.editor_has_snippets {
                     text-align: center;
 
                     > we-customizeblock-option {
-                        display: inline-block; // Ideally -> display: contents;
+                        &, .fa {
+                            display: inline-block !important;
+                        }
                     }
                 }
             }
